<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Салон красоты</string>
    <string name="title_section1">Новости</string>
    <string name="title_section2">Меню</string>
    <string name="title_section3">О салоне красоты</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_activity_shop">Услуги</string>
    <string name="btEnroll">Записаться</string>
    <string name="choose_date">выбрать дату</string>
    <string name="choose_service">выбрать услугу</string>
    <string name="action_enroll_confirm">Подтвердить запись</string>
    <string name="title_activity_activity_date_time">Выбор даты</string>
    <string name="title_activity_activity_maestro">ActivityMaestro</string>
    <string name="title_activity_news_details">Детали</string>

    <string name="action_filter">фильтр</string>
    <string name="action_all">всё</string>
    <string name="action_info">информация</string>
    <string name="action_promo">промо</string>
    <string name="action_community">сообщество</string>
    <string name="text_no_data">Нет данных</string>
    <string name="call_to_barbershop">ЗВОНОК В САЛОН</string>
    <string name="select_date">Выберите дату</string>
    <string name="confirm_dial">Позвонить в салон красоты?</string>
    <string name="action_dial">Позвонить</string>
    <string name="confirm_enroll">Подтверждение записи</string>
    <string name="action_enroll">Оформить запись</string>
    <string name="view_enroll_alert_phone_hint">Введите ваш номер телефона</string>
    <string name="view_entoll_alert_comment_hint">Добавьте комментарий к записи</string>
    <string name="action_enroll_empty_phone">Не указан контактный номер телефона</string>


</resources>
